--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ${OTOPS_PROFILE_API_DOCKER_IMAGE_NAME}:${OTOPS_PROFILE_API_DOCKER_IMAGE_TAG}
     container_name: ot-api
     ports:
-      - "20001:8080"
+      - "8090:8080"
     depends_on:
       - clickhouse
       - elasticsearch
@@ -26,8 +26,8 @@ services:
     image: ${OTOPS_PROFILE_CLICKHOUSE_DOCKER_IMAGE_NAME}:${OTOPS_PROFILE_CLICKHOUSE_DOCKER_IMAGE_TAG}
     container_name: ot-ch
     ports:
-      - "20002:9000"
-      - "20003:8123"
+      - "9000:9000"
+      - "8123:8123"
     volumes:
       - "chconf:/etc/clickhouse-server/config.d"
       - "chusers:/etc/clickhouse-server/users.d"
@@ -41,8 +41,8 @@ services:
     image: ${OTOPS_PROFILE_ELASTIC_SEARCH_DOCKER_IMAGE_NAME}:${OTOPS_PROFILE_ELASTIC_SEARCH_DOCKER_IMAGE_TAG}
     container_name: ot-es
     ports:
-      - "20004:9200"
-      - "20005:9600"
+      - "9200:9200"
+      - "9300:9600"
     environment:
       - "path.data=/usr/share/opensearch/data"
       - "path.logs=/usr/share/opensearch/logs"
@@ -68,11 +68,17 @@ services:
       start_period: 30s
     networks:
       - ot-platform
+    command:
+      - /bin/sh
+      - -c
+      - |
+        /bin/chown opensearch:opensearch -R /usr/share/opensearch/data
+        ./opensearch-docker-entrypoint.sh
 
   nginx:
     image: ${OTOPS_PROFILE_NGINX_DOCKER_IMAGE_NAME}:${OTOPS_PROFILE_NGINX_DOCKER_IMAGE_TAG}
     ports:
-      - "20006:8080"
+      - "8080:8080"
     volumes:
       - "webapp:/srv/site"
       - "${OTOPS_PATH_CONFIG_WEBAPP}/nginx.conf:/etc/nginx/conf.d/default.conf"
@@ -83,7 +89,7 @@ services:
     image: ${OTOPS_PROFILE_OPENAI_API_DOCKER_IMAGE_NAME}:${OTOPS_PROFILE_OPENAI_API_DOCKER_IMAGE_TAG}
     container_name: ot-ai-api
     ports:
-      - 20007:8080 
+      - 8081:8080 
     environment:
       OPENAI_TOKEN: ${OTOPS_PROFILE_OPENAI_TOKEN}
     networks:
